# rtsp_gstreamer_osg

./: CMakeLists.txt  README.md
gstreamer/: CMakeLists.txt  main.cpp
osgmovie/: CMakeLists.txt  main.cpp
rtspserver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  rtspserver  rtspserver.cbp
rtspserver/.cmake/api/v1/reply/: cache-v2-6ac1c9ba8b1f0995503d.json  cmakeFiles-v1-05a088d714c981103472.json  codemodel-v2-f0d6c52d9d7a28703a10.json  index-2023-12-05T14-57-20-0524.json  target-rtspserver-14f4d002f5acf81c5a7b.json
viewer_osg/: CMakeLists.txt  main.cpp
